fixed collapsing padding

--- a/src/components/Digits/EmptyState/empty-state.module.css
+++ b/src/components/Digits/EmptyState/empty-state.module.css
@@ -1,6 +1,7 @@
 .empty-state {
   width: 100%;
   height: 85%;
+  padding: 1rem 0;
 
   display: grid;
   grid-template: min-content 1fr min-content / 1fr;
